--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,14 @@
 body {
-  background-color: lightgray;
+  margin: 0;
+  
+  /* hide scrollbar */
+  overflow: hidden;
+
+  background-color: gray;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
